--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ button {
 body {
   min-height: 100dvh;
   width: 100%;
-  margin: 0 auto;
-  padding: 0 15px;
+  /* margin: 0 auto; */
+  /* padding: 0 15px; */
 }
 
 h1 {
